# docs/swagger.json
@@ -467,6 +467,12 @@
                         "description": "sort",
                         "name": "sort",
                         "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "rating",
+                        "name": "rating",
+                        "in": "query"
                     }
                 ],
                 "responses": {
